# ESP32Clock7inch

./: .gitignore  README.md  esp32-s3-devkitc-1-myboard.json  platformio.ini
UI/: ESP32Clock7inchUI.sll  ESP32Clock7inchUI.spj
UI/assets/: ui_font_Temp65.fcfg  ui_font_Time128.c  ui_font_Time128.fcfg  ui_font_Time150.c  ui_font_Time150.fcfg
include/: lv_conf.h  touch.h  ui.h
src/: display.cpp  display.h  main.cpp  main.h  mqtt.cpp  mqtt.h  ota.cpp  ota.h  radar_sensor.cpp  radar_sensor.h  samlpe_secrets.h  wlan.cpp  wlan.h
src/UI/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
src/UI/components/: ui_comp_hook.c
src/UI/fonts/: ui_font_Temp65.c  ui_font_Temp68.c  ui_font_Temp72.c  ui_font_Time142.c
src/UI/images/: ui_img_brasil48_png.c  ui_img_feuchte48_png.c  ui_img_feuchte64_png.c  ui_img_haus48_png.c  ui_img_outdoor48_png.c  ui_img_outdoor48gruen_png.c  ui_img_temperatur128_png.c  ui_img_temperatur64_png.c
src/UI/screens/: ui_TimeWindow.c
